docs/api/qiskit/0.19/qiskit.extensions.HamiltonianGate.mdx
---
title: HamiltonianGate (v0.19)
description: API reference for qiskit.extensions.HamiltonianGate in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.extensions.HamiltonianGate
---

# HamiltonianGate

<Class id="qiskit.extensions.HamiltonianGate" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.14/qiskit/extensions/hamiltonian_gate.py" signature="HamiltonianGate(data, time, label=None)" modifiers="class">
  Class for representing evolution by a Hermitian Hamiltonian operator as a gate. This gate resolves to a UnitaryGate U(t) = exp(-1j \* t \* H), which can be decomposed into basis gates if it is 2 qubits or less, or simulated directly in Aer for more qubits.

  Create a gate from a hamiltonian operator and evolution time parameter t

  **Parameters**

  *   **data** (*matrix or* [*Operator*](qiskit.quantum_info.Operator "qiskit.quantum_info.Operator")) – a hermitian operator.
  *   **time** (*float*) – time evolution parameter.
  *   **label** (*str*) – unitary name for backend \[Default: None].

  **Raises**

  **ExtensionError** – if input data is not an N-qubit unitary operator.

  ## Attributes

  <span id="hamiltoniangate-decompositions" />

  ### decompositions

  <Attribute id="qiskit.extensions.HamiltonianGate.decompositions">
    Get the decompositions of the instruction from the SessionEquivalenceLibrary.
  </Attribute>

  <span id="hamiltoniangate-definition" />

  ### definition

  <Attribute id="qiskit.extensions.HamiltonianGate.definition">
    Return definition in terms of other basic gates.
  </Attribute>

  <span id="hamiltoniangate-label" />

  ### label

  <Attribute id="qiskit.extensions.HamiltonianGate.label" attributeTypeHint="str">
    Return gate label

    **Return type**

    `str`
  </Attribute>

  <span id="hamiltoniangate-params" />

  ### params

  <Attribute id="qiskit.extensions.HamiltonianGate.params">
    return instruction params.
  </Attribute>

  ## Methods

  <span id="hamiltoniangate-add-decomposition" />

  ### add\_decomposition

  <Function id="qiskit.extensions.HamiltonianGate.add_decomposition" signature="HamiltonianGate.add_decomposition(decomposition)">
    Add a decomposition of the instruction to the SessionEquivalenceLibrary.
  </Function>

  <span id="hamiltoniangate-adjoint" />

  ### adjoint

  <Function id="qiskit.extensions.HamiltonianGate.adjoint" signature="HamiltonianGate.adjoint()">
    Return the adjoint of the unitary.
  </Function>

  <span id="hamiltoniangate-assemble" />

  ### assemble

  <Function id="qiskit.extensions.HamiltonianGate.assemble" signature="HamiltonianGate.assemble()">
    Assemble a QasmQobjInstruction

    **Return type**

    [`Instruction`](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")
  </Function>

  <span id="hamiltoniangate-broadcast-arguments" />

  ### broadcast\_arguments

  <Function id="qiskit.extensions.HamiltonianGate.broadcast_arguments" signature="HamiltonianGate.broadcast_arguments(qargs, cargs)">
    Validation and handling of the arguments and its relationship.

    For example, `cx([q[0],q[1]], q[2])` means `cx(q[0], q[2]); cx(q[1], q[2])`. This method yields the arguments in the right grouping. In the given example:

    ```python
    in: [[q[0],q[1]], q[2]],[]
    outs: [q[0], q[2]], []
          [q[1], q[2]], []
    ```

    The general broadcasting rules are:

    > *   If len(qargs) == 1:
    >
    >     ```python
    >     [q[0], q[1]] -> [q[0]],[q[1]]
    >     ```
    >
    > *   If len(qargs) == 2:
    >
    >     ```python
    >     [[q[0], q[1]], [r[0], r[1]]] -> [q[0], r[0]], [q[1], r[1]]
    >     [[q[0]], [r[0], r[1]]]       -> [q[0], r[0]], [q[0], r[1]]
    >     [[q[0], q[1]], [r[0]]]       -> [q[0], r[0]], [q[1], r[0]]
    >     ```
    >
    > *   If len(qargs) >= 3:
    >
    >     ```python
    >     [q[0], q[1]], [r[0], r[1]],  ...] -> [q[0], r[0], ...], [q[1], r[1], ...]
    >     ```

    **Parameters**

    *   **qargs** (`List`) – List of quantum bit arguments.
    *   **cargs** (`List`) – List of classical bit arguments.

    **Return type**

    `Tuple`\[`List`, `List`]

    **Returns**

    A tuple with single arguments.

    **Raises**

    **CircuitError** – If the input is not valid. For example, the number of arguments does not match the gate expectation.
  </Function>

  <span id="hamiltoniangate-c-if" />

  ### c\_if

  <Function id="qiskit.extensions.HamiltonianGate.c_if" signature="HamiltonianGate.c_if(classical, val)">
    Add classical condition on register classical and value val.
  </Function>

  <span id="hamiltoniangate-conjugate" />

  ### conjugate

  <Function id="qiskit.extensions.HamiltonianGate.conjugate" signature="HamiltonianGate.conjugate()">
    Return the conjugate of the Hamiltonian.
  </Function>

  <span id="hamiltoniangate-control" />

  ### control

  <Function id="qiskit.extensions.HamiltonianGate.control" signature="HamiltonianGate.control(num_ctrl_qubits=1, label=None, ctrl_state=None)">
    Return controlled version of gate. See [`ControlledGate`](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate") for usage.

    **Parameters**

    *   **num\_ctrl\_qubits** (`Optional`\[`int`]) – number of controls to add to gate (default=1)
    *   **label** (`Optional`\[`str`]) – optional gate label
    *   **ctrl\_state** (`Union`\[`int`, `str`, `None`]) – The control state in decimal or as a bitstring (e.g. ‘111’). If None, use 2\*\*num\_ctrl\_qubits-1.

    **Returns**

    Controlled version of gate. This default algorithm uses num\_ctrl\_qubits-1 ancillae qubits so returns a gate of size num\_qubits + 2\*num\_ctrl\_qubits - 1.

    **Return type**

    [qiskit.circuit.ControlledGate](qiskit.circuit.ControlledGate "qiskit.circuit.ControlledGate")

    **Raises**

    **QiskitError** – unrecognized mode or invalid ctrl\_state
  </Function>

  <span id="hamiltoniangate-copy" />

  ### copy

  <Function id="qiskit.extensions.HamiltonianGate.copy" signature="HamiltonianGate.copy(name=None)">
    Copy of the instruction.

    **Parameters**

    **name** (*str*) – name to be given to the copied circuit, if None then the name stays the same.

    **Returns**

    **a copy of the current instruction, with the name**

    updated if it was provided

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="hamiltoniangate-inverse" />

  ### inverse

  <Function id="qiskit.extensions.HamiltonianGate.inverse" signature="HamiltonianGate.inverse()">
    Return the adjoint of the unitary.
  </Function>

  <span id="hamiltoniangate-is-parameterized" />

  ### is\_parameterized

  <Function id="qiskit.extensions.HamiltonianGate.is_parameterized" signature="HamiltonianGate.is_parameterized()">
    Return True .IFF. instruction is parameterized else False
  </Function>

  <span id="hamiltoniangate-mirror" />

  ### mirror

  <Function id="qiskit.extensions.HamiltonianGate.mirror" signature="HamiltonianGate.mirror()">
    For a composite instruction, reverse the order of sub-gates.

    This is done by recursively mirroring all sub-instructions. It does not invert any gate.

    **Returns**

    a fresh gate with sub-gates reversed

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")
  </Function>

  <span id="hamiltoniangate-power" />

  ### power

  <Function id="qiskit.extensions.HamiltonianGate.power" signature="HamiltonianGate.power(exponent)">
    Creates a unitary gate as gate^exponent.

    **Parameters**

    **exponent** (*float*) – Gate^exponent

    **Returns**

    To which to\_matrix is self.to\_matrix^exponent.

    **Return type**

    [qiskit.extensions.UnitaryGate](qiskit.extensions.UnitaryGate "qiskit.extensions.UnitaryGate")

    **Raises**

    **CircuitError** – If Gate is not unitary
  </Function>

  <span id="hamiltoniangate-qasm" />

  ### qasm

  <Function id="qiskit.extensions.HamiltonianGate.qasm" signature="HamiltonianGate.qasm()">
    Raise an error, as QASM is not defined for the HamiltonianGate.
  </Function>

  <span id="hamiltoniangate-repeat" />

  ### repeat

  <Function id="qiskit.extensions.HamiltonianGate.repeat" signature="HamiltonianGate.repeat(n)">
    Creates an instruction with gate repeated n amount of times.

    **Parameters**

    **n** (*int*) – Number of times to repeat the instruction

    **Returns**

    Containing the definition.

    **Return type**

    [qiskit.circuit.Instruction](qiskit.circuit.Instruction "qiskit.circuit.Instruction")

    **Raises**

    **CircuitError** – If n \< 1.
  </Function>

  <span id="hamiltoniangate-to-matrix" />

  ### to\_matrix

  <Function id="qiskit.extensions.HamiltonianGate.to_matrix" signature="HamiltonianGate.to_matrix()">
    Return matrix for the unitary.
  </Function>

  <span id="hamiltoniangate-transpose" />

  ### transpose

  <Function id="qiskit.extensions.HamiltonianGate.transpose" signature="HamiltonianGate.transpose()">
    Return the transpose of the Hamiltonian.
  </Function>
</Class>

